--- a/Muhammad Rizky Ikhwan_2010010178_tugasPBO/src/main/java/frame/penjualanViewFrame.form
+++ b/Muhammad Rizky Ikhwan_2010010178_tugasPBO/src/main/java/frame/penjualanViewFrame.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frame.karyawanViewFrame">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frame.penjualanViewFrame">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="0" right="16"/>
     <constraints>
@@ -78,7 +78,7 @@
               <text value="Hapus"/>
             </properties>
           </component>
-          <component id="30ced" class="javax.swing.JButton" binding="batalButton" default-binding="true">
+          <component id="f63be" class="javax.swing.JButton" binding="batalButton" default-binding="true">
             <constraints/>
             <properties>
               <text value="Batal"/>
