--- a/Muhammad Rizky Ikhwan_2010010178_tugasPBO/src/main/java/frame/penjualanInputFrame.form
+++ b/Muhammad Rizky Ikhwan_2010010178_tugasPBO/src/main/java/frame/penjualanInputFrame.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frame.karyawanInputFrame">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="frame.penjualanInputFrame">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="16" left="16" bottom="0" right="16"/>
     <constraints>
@@ -38,7 +38,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="nama karyawan"/>
+          <text value="Nama Pelanggan"/>
         </properties>
       </component>
       <component id="a2d59" class="javax.swing.JTextField" binding="namaTextField">
@@ -75,7 +75,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Jabatan"/>
+          <text value="Nama Kasir"/>
         </properties>
       </component>
       <component id="1fe48" class="javax.swing.JLabel">
@@ -83,16 +83,16 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Shiff"/>
+          <text value="Barang"/>
         </properties>
       </component>
-      <component id="fdb15" class="javax.swing.JComboBox" binding="shiffcb">
+      <component id="fdb15" class="javax.swing.JComboBox" binding="barangcb">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="beefd" class="javax.swing.JComboBox" binding="jabatancb">
+      <component id="beefd" class="javax.swing.JComboBox" binding="kasircb">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
